--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
                     <h2 class="text-3xl font-serif font-semibold text-yellow-400 mb-3">KΔIRA Code Lab</h2>
                     <p class="text-slate-400">Canvas üzerinde kod yaz, çalıştır ve AI ile geliştirmeyi dene.(Test Aşamasında)</p>
                 
-                <div id="select-forum" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
+                <a href="/forum/forum.html" class="choice-card glass-container rounded-2xl p-8 cursor-pointer block">
                     <h2 class="text-3xl font-serif font-semibold text-blue-400 mb-3">KΔIRA Forumları</h2>
                     <p class="text-slate-400">Diğer kullanıcılarla tartış, fikirlerini paylaş. Üyelik zorunlu değil.</p>
-                </div>
+                </a>
                 <a href="/game" class="choice-card glass-container rounded-2xl p-8 cursor-pointer block">
                     <h2 class="text-3xl font-serif font-semibold text-pink-400 mb-3">Parallel Realms — Oyun</h2>
                     <p class="text-slate-400">Paralel evrenler arasında geçiş yap, farklı fizik ve kuralları kullanarak 3 parçayı topla ve çıkışı bul.</p>
