--- a/index.html
+++ b/index.html
@@ -230,38 +230,37 @@
             </h1>
             <p class="selection-subtitle text-lg md:text-xl text-slate-400 mb-12 max-w-2xl">Lütfen deneyimlemek istediğin projeyi seç.</p>
             <div class="selection-grid-content grid md:grid-cols-2 gap-8 w-full max-w-5xl">
-                <div id="select-afterlife" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
+                <div id="select-afterlife" class="choice-card glass-container rounded-2xl p-8 cursor-pointer h-full flex flex-col">
                     <h2 class="text-3xl font-serif font-semibold text-cyan-400 mb-3">Digital Afterlife</h2>
-                    <p class="text-slate-400">Zihnin biyolojiye hapis olmadığı, anıların sonsuza dek yaşadığı felsefi bir yolculuğu keşfet.</p>
+                    <p class="text-slate-400 mt-auto">Zihnin biyolojiye hapis olmadığı, anıların sonsuza dek yaşadığı felsefi bir yolculuğu keşfet.</p>
                 </div>
-                
-                <div id="select-editor" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
+                <div id="select-editor" class="choice-card glass-container rounded-2xl p-8 cursor-pointer h-full flex flex-col">
                     <h2 class="text-3xl font-serif font-semibold text-purple-400 mb-3">Yapay Zeka Editör</h2>
-                    <p class="text-slate-400">Fotoğraflarınızı yükleyin ve metin komutlarıyla saniyeler içinde dilediğiniz gibi düzenleyin.</p>
+                    <p class="text-slate-400 mt-auto">Fotoğraflarınızı yükleyin ve metin komutlarıyla saniyeler içinde dilediğiniz gibi düzenleyin.</p>
                 </div>
-                <div id="select-chat" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
+                <div id="select-chat" class="choice-card glass-container rounded-2xl p-8 cursor-pointer h-full flex flex-col">
                     <h2 class="text-3xl font-serif font-semibold text-green-400 mb-3">Evrensel Sohbet Arayüzü</h2>
-                    <p class="text-slate-400">Farklı yapay zeka modelleriyle tek bir yerden sohbet edin ve yeteneklerini karşılaştırın.</p>
+                    <p class="text-slate-400 mt-auto">Farklı yapay zeka modelleriyle tek bir yerden sohbet edin ve yeteneklerini karşılaştırın.</p>
                 </div>
-                <div id="select-nasa" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
+                <div id="select-nasa" class="choice-card glass-container rounded-2xl p-8 cursor-pointer h-full flex flex-col">
                     <h2 class="text-3xl font-serif font-semibold text-orange-400 mb-3">KΔIRA Gözlem Platformu</h2>
-                    <p class="text-slate-400">NASA verileriyle uzayı ve Dünya’yı keşfet.</p>
+                    <p class="text-slate-400 mt-auto">NASA verileriyle uzayı ve Dünya’yı keşfet.</p>
                 </div>
-                <div id="select-asistan" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
+                <div id="select-asistan" class="choice-card glass-container rounded-2xl p-8 cursor-pointer h-full flex flex-col">
                     <h2 class="text-3xl font-serif font-semibold text-rose-400 mb-3">KΔIRA Sesli Asistan</h2>
-                    <p class="text-slate-400">KΔIRA'nın sesli asistanıyla sohbet etmek istermisiniz ?</p>
+                    <p class="text-slate-400 mt-auto">KΔIRA'nın sesli asistanıyla sohbet etmek istermisiniz ?</p>
                 </div>
-                <div id="select-codelab" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
+                <div id="select-codelab" class="choice-card glass-container rounded-2xl p-8 cursor-pointer h-full flex flex-col">
                     <h2 class="text-3xl font-serif font-semibold text-yellow-400 mb-3">KΔIRA Code Lab</h2>
-                    <p class="text-slate-400">Canvas üzerinde kod yaz, çalıştır ve AI ile geliştirmeyi dene.(Test Aşamasında)</p>
-                
-                <a href="/forum/forum.html" class="choice-card glass-container rounded-2xl p-8 cursor-pointer block">
+                    <p class="text-slate-400 mt-auto">Canvas üzerinde kod yaz, çalıştır ve AI ile geliştirmeyi dene.(Test Aşamasında)</p>
+                </div>
+                <a href="/forum/forum.html" class="choice-card glass-container rounded-2xl p-8 cursor-pointer h-full flex flex-col">
                     <h2 class="text-3xl font-serif font-semibold text-blue-400 mb-3">KΔIRA Forumları</h2>
-                    <p class="text-slate-400">Diğer kullanıcılarla tartış, fikirlerini paylaş. Üyelik zorunlu değil.</p>
+                    <p class="text-slate-400 mt-auto">Diğer kullanıcılarla tartış, fikirlerini paylaş. Üyelik zorunlu değil.</p>
                 </a>
-                <a href="/game" class="choice-card glass-container rounded-2xl p-8 cursor-pointer block">
+                <a href="/game" class="choice-card glass-container rounded-2xl p-8 cursor-pointer h-full flex flex-col">
                     <h2 class="text-3xl font-serif font-semibold text-pink-400 mb-3">Parallel Realms — Oyun</h2>
-                    <p class="text-slate-400">Paralel evrenler arasında geçiş yap, farklı fizik ve kuralları kullanarak 3 parçayı topla ve çıkışı bul.</p>
+                    <p class="text-slate-400 mt-auto">Paralel evrenler arasında geçiş yap, farklı fizik ve kuralları kullanarak 3 parçayı topla ve çıkışı bul.</p>
                 </a>
             </div>
         </div>
