--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,8 @@
                     'llama3-70b-8192', 
                     'llama3-8b-8192', 
                     'mixtral-8x7b-32768', 
-                    'gemma-7b-it'
+                    'gemma-7b-it',
+                    'groq/compound'
                 ]
             },
             google: {
@@ -1472,7 +1473,8 @@
                     'llama3-70b-8192', 
                     'llama3-8b-8192', 
                     'mixtral-8x7b-32768', 
-                    'gemma-7b-it'
+                    'gemma-7b-it',
+                    'groq/compound'
                 ]
             },
             google: {
